--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -97,3 +97,39 @@
 .hide-on-scroll {
     display: none;
 }
+
+@media screen and (max-width: 768px) {
+
+    .navbar ul {
+      position: absolute;
+      top: -10vh;
+      flex-direction: column;
+      align-items: flex-start;
+      width: 80%;
+      display: none;
+      background-color: #000;
+    }
+  
+    .navbar ul li {
+      margin: 20px 0;
+    }
+  
+    .navbar ul li a {
+      color: #fff;
+    }
+  
+    .navbar.show {
+      height: auto;
+    }
+  
+    .navbar.show ul {
+      display: flex;
+    }
+  
+    .navbar-toggle {
+      position: fixed;
+      z-index: 2000;
+      display: block;
+    }
+  }
+  
