--- a/styles/terminal.css
+++ b/styles/terminal.css
@@ -1,14 +1,15 @@
 .terminal-section {
-    padding: 8vh;
+    padding: 10vh;
     display: flex;
     padding-bottom: 0;
+    padding-left: 12vh;
 }
   
   .terminal {
     font-family: 'Courier New', monospace;
     position:sticky;
     overflow: hidden;
-    width: 70vh;
+    width: 80vh;
     max-width: 100%;
     height: 350px;
     background-color: #1c1c1c;
@@ -70,3 +71,14 @@
     }
   }
   
+  @media (max-width: 768px) {
+    .terminal-section {
+      flex-direction: column;
+      padding: 0%;
+    }
+
+    .terminal{
+      padding-left: 0vh;
+      font-size: 11px;
+    }
+  }
